[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pegs/Pink/PinkPeg.gd" type="Script" id=1]
[ext_resource path="res://Pegs/DefaultPegCollisionShape.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pegs/Pink/Pink.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 10.2018

[sub_resource type="CircleShape2D" id=1]
radius = 33.0151

[node name="PinkPeg" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="RegularCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RegularCollision"]
shape = SubResource( 2 )

[node name="SlowmoTimer" type="Timer" parent="."]
wait_time = 0.075
one_shot = true

[node name="DefaultPegCollisionShape" parent="." instance=ExtResource( 2 )]

[node name="Pink" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="LastPegCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LastPegCollision"]
shape = SubResource( 1 )

[connection signal="body_entered" from="RegularCollision" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="RegularCollision" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="SlowmoTimer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="LastPegCollision" to="." method="_on_LastPegCollision_body_entered"]
[connection signal="body_exited" from="LastPegCollision" to="." method="_on_Area2D_body_exited"]
